<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingTop="80dp"
        android:paddingEnd="50dp"
        android:paddingBottom="80dp">

        <ImageView
            android:id="@+id/profilePhotoImageView"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueTextInputProfileName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_name_of_user"
            app:layout_constraintTop_toBottomOf="@id/profilePhotoImageView"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueTextInputProfileCompanyName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_of_company"
            app:layout_constraintTop_toBottomOf="@id/valueTextInputProfileName"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/canselButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:minWidth="125dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valueTextInputProfileCompanyName"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="125dp"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/canselButton"
            app:layout_constraintTop_toBottomOf="@id/valueTextInputProfileCompanyName"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>