<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingTop="80dp"
        android:paddingEnd="50dp"
        android:paddingBottom="80dp">

        <ImageView
            android:id="@+id/createUserImageView"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:contentDescription="@string/create_user"
            android:src="@drawable/ic_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueTextInputUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_name_of_user"
            app:layout_constraintTop_toBottomOf="@id/createUserImageView"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueTextInputCompanyName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_of_company"
            app:layout_constraintTop_toBottomOf="@id/valueTextInputUsername"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/makeSelectedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_new_user_selected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valueTextInputCompanyName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:text="@string/create_user"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/makeSelectedCheckBox"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>