<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/user_photo_description"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usernameTextView"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/userImageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="John Smith" />

            <TextView
                android:id="@+id/companyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/userImageView"
                app:layout_constraintTop_toBottomOf="@id/usernameTextView"
                tools:text="Apple Inc." />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/changeUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="@string/change_user"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/userImageView"
                app:layout_constraintTop_toBottomOf="@id/companyTextView"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/dark_grey" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/languageImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/language_image_description"
                android:paddingBottom="5dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/languageTextView"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/changeLanguageButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/languageImageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Kotlin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/changeLanguageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="@string/change_language"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/languageImageView"
                app:layout_constraintTop_toBottomOf="@id/languageTextView"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>